# consistency_flowpacker

./: .gitignore  LICENSE  README.md  pyproject.toml
experiments/: eval_consistency.py  train_distillation.py
notebooks/: toy_example.ipynb
scripts/: compare_runs.py  run_pipeline.sh  test_repo.sh  train_distillation.py  train_distillation.py~
src/: __init__.py  __main__.py  consistency.py  dataset.py  fabrics.py  schedulers.py  util.py  utils.py
